# ProyectoProgra3

./: .gitignore  CMakeLists.txt  README.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/animations/: animation_1.json  animation_2.json  animation_3.json  animation_4.json  animation_5.json
frontend/src/api/: api.js
frontend/src/pages/: Busqueda.jsx  BusquedaTag.jsx  Favoritos.jsx  Home.jsx  Movies.jsx  NavBar.jsx  VerDespues.jsx
include/: MovieDatabase.h  utils.h
src/: MovieDatabase.cpp  main.cpp  utils.cpp
